# Power-Amplifier-Sequencer

./: .gitignore  CMakeLists.txt  README.md  README_API.md  README_CLI.md  README_DEPLOYMENT.md  RELEASE_NOTES.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitm-1
components/ads1115/: CMakeLists.txt  README.md  ads1115.c
components/buttons/: CMakeLists.txt  README.md  buttons.c
components/cli/: CMakeLists.txt  README.md  cli.c  cmd_adc.c  cmd_config.c  cmd_fault.c  cmd_log.c  cmd_monitor.c  cmd_ota.c  cmd_relay.c  cmd_seq.c  cmd_status.c  cmd_system.c  cmd_wifi.c
components/cli/include/: cli.h
components/config/: CMakeLists.txt  README.md  config.c
components/hw_config/: README.md
components/monitor/: CMakeLists.txt  README.md  monitor.c
components/ota/: CMakeLists.txt  README.md  ota.c
components/ptt/: CMakeLists.txt  README.md  ptt.c
components/relays/: CMakeLists.txt  README.md  relays.c
components/sequencer/: CMakeLists.txt  README.md  sequencer.c
components/web_server/: CMakeLists.txt  README.md  api_adc.c  api_config.c  api_fault.c  api_ota.c  api_relay.c  api_seq.c  api_state.c  api_static.c  api_system.c  api_wifi.c  web_json.c  web_json.h  web_server.c  web_ws.c  web_ws.h
components/web_server/include/: web_server.h
data/: index.html
src/: CMakeLists.txt  main.c
tests/: conftest.py  pytest.ini  requirements.txt  test_adc.py  test_config.py  test_fault.py  test_ota.py  test_relay.py  test_seq.py  test_state.py  test_system.py  test_websocket.py  test_wifi.py
web/: README.md
web/static/: index.html
(+30 files in other folders)
